# Computer-Architecture

./: README.md
PA1/: Write-up.docx
PA1/codes/: digitsum_asm.s  fibonacci_asm.s  tree_asm.s
PA2/: 2019-11563.docx
PA2/codes/: CMakeLists.txt  bits.c  main.c
PA4/: Write-Up.docx
PA4/codes/: csim.c
PA5/: 2019-11563.docx
PA5/codes/: 2019-11563.txt  Makefile  matmul.c
PA5/codes/matmul_demo-master/: .gitignore  CMakeLists.txt  README.md  main.c  matmul.c  matmul.h  utils.c  utils.h
